# school-projects

./: .gitignore  .gitignore.swp  README.md
CETYS/CCA - portfolio/: index.html
CETYS/CCA - portfolio/css/: index.css
CETYS/EXAM - pares/: EXAM - pares.sln
CETYS/EXAM - pares/EXAM - pares/: EXAM - pares.csproj
CETYS/ICC - QA script/: ICC - QA script.py  q_a.json
CETYS/ICC - converter/: ICC - converter.sln  Window.Designer.cs
CETYS/ICC - converter/ICC - converter/: Form1.Designer.cs  Form1.cs  GUI.Designer.cs  GUI.cs  GUI.resx  ICC - converter.csproj  Program.cs  Run.cs  Window.Designer.cs  Window.cs  Window.resx  main.cs
CETYS/ICC - converter/Properties/: AssemblyInfo.cs
CETYS/ICC - photos to base64/: main.py
CETYS/ICC - trivia/: main.py
CETYS/MP -  steam mexico/: MP -  steam mexico.sln
CETYS/MP -  steam mexico/MP -  steam mexico/: MP -  steam mexico.csproj  main.cs
CETYS/MP - ProjectoFinal_Ortega y Cuevas/ProjectoFinal_Ortega y Cuevas/: main.cs
CETYS/MP - ProyectoFinal_Ortega_Cuevas/ProyectoFinal_Ortega_Cuevas/: Program.cs  ProyectoFinal_Ortega_Cuevas.csproj
CETYS/MP - agenda/MP - agenda/: MP - agenda.csproj  main.cs
CETYS/MP - algorithms/: MP - algorithms.sln
CETYS/MP - algorithms/MP - algorithms/: MP - algorithms.csproj  main.cs
CETYS/MP - don chapo/: MP - don chapo.sln
CETYS/MP - don chapo/MP - don chapo/: MP - don chapo.csproj
CETYS/MP - estadisticas/Estadisticas/: Estadisticas.sln
CETYS/MP - funciones/: FuncionCalculos.sln
CETYS/MP - funciones/FuncionCalculos/: FuncionCalculos.csproj  main.cs
CETYS/MP - group solution/: MP - group solution.sln
CETYS/MP - group solution/MP - group solution/: MP - group solution.csproj  main.cs
CETYS/MP - tienda de juegos/: MP - tienda de juegos.sln
CETYS/MP - tienda de juegos/MP - tienda de juegos/: main.cs
CETYS/S2/CALCULUS/: Final.py  Switch n’ Balloons!.py
CETYS/S3/ARQ/: SAD.py  test.hex  test.sad
CETYS/S3/EDD/BinaryTree/Search/v2/: CMakeLists.txt
CETYS/S3/EDD/PerformanceEvaluation/: CMakeLists.txt  README.ipynb  README.md  evaluate.sh
CETYS/S3/EDD/PerformanceEvaluation/include/: kmp.hpp
CETYS/S3/EDD/PerformanceEvaluation/src/: kmp.cpp
CETYS/S3/EDD/Sort/v2/: CMakeLists.txt
CETYS/S3/EDD/Sort/v2/include/: Sort.hpp
CETYS/S3/EDD/Sort/v2/src/: Sort.cpp
CETYS/S3/EDD/Sort/v2/test/: SortingTest.cpp
CETYS/S3/MN/: Actividad #3 - sistema lineal.py
CETYS/S4/AG/: diccionario.csv  función_hash.cpp  métricos  métricos.cpp
CETYS/S5/ML/: C02_CLCM.ipynb  P01_CLCM.R  P01_CLCM.ipynb
CETYS/S5/OS/: .cproject  .mxproject
CETYS/S7/PARALLEL/: atomic.cpp  crit.cpp  helloworld.cpp  helloworlds.cpp  linked.c  linkes.c  mandel.c  pi_mc.c  pie.cpp  pie_atomic.cpp  pie_serial.2.cpp  pie_serial.cpp  pis_crit.cpp  pis_reduction.cpp  pis_schedule.cpp  pis_worksharing.cpp  prod_cons.c  serial_pi.cpp  serial_pis.2.cpp  serial_pis.cpp
IMAN/INFO/geology/: landmarks.php
IMAN/info - escalante guerra/dashboard/: dashboard.php  index.php
IMAN/info - escalante guerra/scripts/: jobs.php
IMAN/info - escalante guerra/website/: curriculum.php
IMAN/info - geology/: index.html
IMAN/info - geology/landmarks/: DON'T DELETE.txt
IMAN/info - metropoli2go/kanban/: index.php  kanban.php
atoms - physics/version - 1/: index.css  index.html  index.js
atoms - physics/version - 2/: index.css  index.js
info - escalante guerra/: dashboard.php  index.php
info - escalante guerra/dashboard/: dashboard.php  index.php
info - escalante guerra/js/: common.js  dashboard.js  form_generator.js  forms.js
info - escalante guerra/scripts/: candidates.php  quotations.php
info - escalante guerra/server/: api.php  db.php  server.php
info - escalante guerra/website/: cotizacion.php  curriculum.php  requisicion.php
info - kanban/: db_structure.sql  index.html  index.php  login.php
info - kanban/css/: _login.css  gui.css  index.css  lists.css  login.css  styles.css
info - kanban/css/common/: gui.css
info - kanban/files/: DELETE ME.txt
info - kanban/html/: login.html
info - kanban/js/: add.js  gui.js  index.js  muuri-app.js
info - kanban/php/: API.php  DB.php  category_menu.php  configuration_menu.php  login.php  login_menu.php  logout.php  print_table.php  table_menu.php  task_menu.php
info - metropoli2go/kanban/: index.php  kanban.php
physics - atoms/version - 2/: index.html  index.js
school - geology/: index.html  index.js  landmarks.php  server.php
(+515 files in other folders)
